2008-02-07  Mirco Bauer <meebey@meebey.net> 

	* src/Main.cs, src/DBTest.cs, SmartDao.Tests.mdp: - added bool and double
	  tests
