@@ -1,0 +1,6 @@
+2008-02-11  Mirco Bauer <meebey@meebey.net> 
+
+	* src/ColumnAttribute.cs, src/DatabaseManager.cs: Implemented NOT NULL
+	  support.
+	* src/Query.cs: Added profiling code.
+
